# ADAPT-MS-NM

./: .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  Readme.md  pyproject.toml  requirements.txt
R/: AdaptmsClassifier.R  AdaptmsMultiClassifier.R  BaselineClassifier.R  ImputationUtils.R  NonRefitClassifier.R  NonValClassifier.R  XGBfillClassifier.R  install_dependencies.R
adaptms/: AdaptmsMultiClassifier.py
data/: AD_CSF_20sample_subset_per_cohort.pg_matrix.tsv  AD_CSF_Berlin.pg_matrix.tsv  AD_CSF_Berlin_Sw+MK_speclib.tsv  AD_CSF_MagKiel.pg_matrix.tsv  AD_CSF_Rest_cohorts_minus20sample_subset.pg_matrix.tsv  AD_CSF_Sweden+MagKiel.pg_matrix.tsv  AD_CSF_Sweden.pg_matrix.tsv  Dataset EV4.xlsx  SCIVIAS_cluster_labels.csv  Scivias_metadata_new.csv  Scivias_urine_metadata.tsv  annotation of samples_AM1.5.11.xlsx  sample_info_2575processed_PRIDE.xlsx
man/: ADAPTMSNM-package.Rd  classifiers.Rd
notebooks/: 20250310_ADAPT-MS_Xue.ipynb  20250310_ADAPT-MS_sepsis_study.ipynb  20250316_ADAPT-MS_AD_CSF_20_subset_per_cohort.ipynb  20250316_ADAPT-MS_AD_CSF_full_cohort.ipynb  20250316_ADAPT-MS_AD_CSF_train_on_Sweden+Kiel_apply_to_Berlin.ipynb  20250316_ADAPT-MS_AD_CSF_train_on_Sweden_apply_to_Kiel+Berlin copy.ipynb  20250316_ADAPT-MS_AD_CSF_train_on_Sweden_apply_to_Kiel+Berlin.ipynb
notebooks_R/: ADAPT-MS_AD_CSF_cross_cohort.Rmd  ADAPT-MS_AD_CSF_full_cohort.Rmd  ADAPT-MS_Xue_study.Rmd  ADAPT-MS_sepsis_study.Rmd
utils/: AdaptmsClassifier.py  AdaptmsMultiClassifier.py  BaselineClassifier.py  NonRefitClassifier.py  NonValClassifier.py  XGBfillClassifier.py
(+359 files in other folders)
