[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "matplotlib==3.8.4",
    "numpy==1.25.2",
    "pandas==2.0.3",
    "scikit_learn==1.3.0",
    "scipy==1.11.4",
    "statsmodels==0.14.0",
    "tqdm==4.67.1",
    "xgboost==1.7.6",
    "notebook==7.3.3",
]